--- a/ui/mainsys.ui
+++ b/ui/mainsys.ui
@@ -345,7 +345,7 @@ color: #1d3453;
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="lawyerPage">
      <widget class="QWidget" name="verticalLayoutWidget_2">
@@ -423,7 +423,7 @@ color: #1d3453;
        <bool>true</bool>
       </property>
       <attribute name="horizontalHeaderVisible">
-       <bool>true</bool>
+       <bool>false</bool>
       </attribute>
       <attribute name="horizontalHeaderCascadingSectionResizes">
        <bool>false</bool>
@@ -1149,7 +1149,7 @@ QPushButton:hover{
        <rect>
         <x>10</x>
         <y>150</y>
-        <width>501</width>
+        <width>491</width>
         <height>471</height>
        </rect>
       </property>
@@ -1171,21 +1171,24 @@ QPushButton:hover{
        <bool>true</bool>
       </property>
       <attribute name="horizontalHeaderVisible">
-       <bool>false</bool>
+       <bool>true</bool>
       </attribute>
       <attribute name="horizontalHeaderCascadingSectionResizes">
        <bool>false</bool>
       </attribute>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>160</number>
+       <number>250</number>
       </attribute>
       <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
        <bool>true</bool>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
-       <bool>true</bool>
+       <bool>false</bool>
       </attribute>
       <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderStretchLastSection">
        <bool>false</bool>
       </attribute>
       <row>
@@ -1195,7 +1198,7 @@ QPushButton:hover{
       </row>
       <column>
        <property name="text">
-        <string>Case No</string>
+        <string>Client Name</string>
        </property>
       </column>
       <column>
@@ -1203,22 +1206,12 @@ QPushButton:hover{
         <string>Case Name</string>
        </property>
       </column>
-      <column>
-       <property name="text">
-        <string>Client Name</string>
-       </property>
-      </column>
       <item row="0" column="0">
-       <property name="text">
-        <string>34252</string>
-       </property>
-      </item>
-      <item row="0" column="1">
        <property name="text">
         <string>Morgana v Skadden</string>
        </property>
       </item>
-      <item row="0" column="2">
+      <item row="0" column="1">
        <property name="text">
         <string>Civil</string>
        </property>
@@ -1251,7 +1244,7 @@ QPushButton:hover{
        <bool>true</bool>
       </property>
       <attribute name="horizontalHeaderVisible">
-       <bool>false</bool>
+       <bool>true</bool>
       </attribute>
       <attribute name="horizontalHeaderCascadingSectionResizes">
        <bool>false</bool>
@@ -1309,7 +1302,7 @@ QPushButton:hover{
        <rect>
         <x>10</x>
         <y>100</y>
-        <width>501</width>
+        <width>491</width>
         <height>42</height>
        </rect>
       </property>
@@ -1368,7 +1361,7 @@ QPushButton:hover{
           <string/>
          </property>
          <property name="placeholderText">
-          <string>Search Case Here (ID, Name, Type, Dates, Status)</string>
+          <string>Search Client Case Here (Client Name, Case Name)</string>
          </property>
         </widget>
        </item>
@@ -1512,7 +1505,7 @@ QPushButton:hover{
           <string/>
          </property>
          <property name="placeholderText">
-          <string>Search Case Here (ID, Name, Type, Dates, Status)</string>
+          <string>Search Lawyer Case Here (Name, Date)</string>
          </property>
         </widget>
        </item>
