--- a/ui/editLawyer.ui
+++ b/ui/editLawyer.ui
@@ -56,7 +56,7 @@ height: 35px;
    <property name="font">
     <font>
      <family>Poppins</family>
-     <pointsize>-1</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -68,7 +68,7 @@ height: 35px;
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 }
 
 QPushButton:hover{
@@ -432,7 +432,7 @@ QPushButton:hover{
    <property name="font">
     <font>
      <family>Poppins</family>
-     <pointsize>-1</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -444,7 +444,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 }
 
 QPushButton:hover{
