--- a/ui/mainsys.ui
+++ b/ui/mainsys.ui
@@ -21,14 +21,12 @@ background-color: #1d3453;
 #lawyerButton{
   border: none;
   color: #fff;
-  cursor: pointer;
-  font-size: 18px;
+  font-size: 13.5pt;
   outline: 0;
   padding: 16px 21px;
   position: relative;
 text-align: left;
   text-decoration: none;
-  transition: all .3s;
 }
 
 #lawyerButton:checked {
@@ -39,14 +37,12 @@ color: #1d3453;
 #clientButton{
   border: none;
   color: #fff;
-  cursor: pointer;
-  font-size: 18px;
+  font-size: 13.5pt;
   outline: 0;
   padding: 16px 21px;
   position: relative;
 text-align: left;
   text-decoration: none;
-  transition: all .3s;
 }
 
 #clientButton:checked {
@@ -57,14 +53,12 @@ color: #1d3453;
 #caseButton{
   border: none;
   color: #fff;
-  cursor: pointer;
-  font-size: 18px;
+  font-size: 13.5pt;
   outline: 0;
   padding: 16px 21px;
   position: relative;
 text-align: left;
   text-decoration: none;
-  transition: all .3s;
 }
 #caseButton:checked {
  background-color: #F5FAFE;
@@ -75,14 +69,12 @@ color: #1d3453;
 #caseButton_2{
   border: none;
   color: #fff;
-  cursor: pointer;
-  font-size: 12px;
+  font-size: 9pt;
   outline: 0;
   padding: 6px 8px;
   position: relative;
 text-align: right;
   text-decoration: none;
-  transition: all .3s;
 }
 
 #caseButton_2:checked {
@@ -95,6 +87,7 @@ background-color: #142b39;
 color: white; 
 font-weight: bold; 
 font-family: Poppins;
+font-size: 9pt;
 }
 
 </string>
@@ -145,7 +138,7 @@ color: #1d3453;
         <property name="font">
          <font>
           <family>Poppins</family>
-          <pointsize>-1</pointsize>
+          <pointsize>14</pointsize>
           <underline>false</underline>
           <strikeout>false</strikeout>
          </font>
@@ -174,7 +167,7 @@ color: #1d3453;
         <property name="font">
          <font>
           <family>Poppins</family>
-          <pointsize>-1</pointsize>
+          <pointsize>14</pointsize>
           <underline>false</underline>
           <strikeout>false</strikeout>
          </font>
@@ -203,29 +196,13 @@ color: #1d3453;
         <property name="font">
          <font>
           <family>Poppins</family>
-          <pointsize>-1</pointsize>
+          <pointsize>14</pointsize>
           <underline>false</underline>
           <strikeout>false</strikeout>
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">#caseButton{
-  border: none;
-  color: #fff;
-  cursor: pointer;
-  font-size: 18px;
-  outline: 0;
-  padding: 16px 21px;
-  position: relative;
-text-align: left;
-  text-decoration: none;
-  transition: all .3s;
-}
-#caseButton:checked {
- background-color: #F5FAFE;
-color: #1d3453;
-}
-</string>
+         <string notr="true"/>
         </property>
         <property name="text">
          <string>Case List</string>
@@ -248,7 +225,7 @@ color: #1d3453;
         <property name="font">
          <font>
           <family>Poppins</family>
-          <pointsize>-1</pointsize>
+          <pointsize>9</pointsize>
           <underline>false</underline>
           <strikeout>false</strikeout>
          </font>
@@ -286,7 +263,7 @@ color: #1d3453;
      <property name="font">
       <font>
        <family>Poppins</family>
-       <pointsize>-1</pointsize>
+       <pointsize>14</pointsize>
        <weight>50</weight>
        <bold>false</bold>
        <underline>false</underline>
@@ -297,14 +274,12 @@ color: #1d3453;
       <string notr="true">#exitButton{
   border: none;
   color: #fff;
-  cursor: pointer;
-  font-size: 18px;
+  font-size: 13.5pt;
   outline: 0;
   padding: 16px 21px;
   position: relative;
 text-align: center;
   text-decoration: none;
-  transition: all .3s;
 }
 
 #exitButton:checked {
@@ -665,7 +640,7 @@ QPushButton:hover{
          <property name="font">
           <font>
            <family>Poppins</family>
-           <pointsize>-1</pointsize>
+           <pointsize>11</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -677,7 +652,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 100px;
 }
@@ -696,7 +671,7 @@ QPushButton:hover{
          <property name="font">
           <font>
            <family>Poppins</family>
-           <pointsize>-1</pointsize>
+           <pointsize>11</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -708,7 +683,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 120px;
 }
@@ -751,7 +726,7 @@ QPushButton:hover{
          <property name="font">
           <font>
            <family>Poppins</family>
-           <pointsize>-1</pointsize>
+           <pointsize>11</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -763,7 +738,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 120px;
 }
@@ -911,7 +886,7 @@ QPushButton:hover{
          <property name="font">
           <font>
            <family>Poppins</family>
-           <pointsize>-1</pointsize>
+           <pointsize>11</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -923,7 +898,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 100px;
 }
@@ -942,7 +917,7 @@ QPushButton:hover{
          <property name="font">
           <font>
            <family>Poppins</family>
-           <pointsize>-1</pointsize>
+           <pointsize>11</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -954,7 +929,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 120px;
 }
@@ -997,7 +972,7 @@ QPushButton:hover{
          <property name="font">
           <font>
            <family>Poppins</family>
-           <pointsize>-1</pointsize>
+           <pointsize>11</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -1009,7 +984,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 120px;
 }
@@ -1037,6 +1012,9 @@ QPushButton:hover{
       <property name="font">
        <font>
         <family>Poppins</family>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
        </font>
       </property>
       <property name="focusPolicy">
@@ -1315,7 +1293,7 @@ QPushButton:hover{
          <property name="font">
           <font>
            <family>Poppins</family>
-           <pointsize>-1</pointsize>
+           <pointsize>11</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -1327,7 +1305,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 130px;
 }
@@ -1379,7 +1357,7 @@ QPushButton:hover{
       <property name="font">
        <font>
         <family>Poppins</family>
-        <pointsize>-1</pointsize>
+        <pointsize>11</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
@@ -1391,7 +1369,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 120px;
 }
@@ -1416,7 +1394,7 @@ QPushButton:hover{
       <property name="font">
        <font>
         <family>Poppins</family>
-        <pointsize>-1</pointsize>
+        <pointsize>11</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
@@ -1428,7 +1406,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 120px;
 }
@@ -1459,7 +1437,7 @@ QPushButton:hover{
          <property name="font">
           <font>
            <family>Poppins</family>
-           <pointsize>-1</pointsize>
+           <pointsize>11</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
@@ -1471,7 +1449,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 140px;
 }
@@ -1523,7 +1501,7 @@ QPushButton:hover{
       <property name="font">
        <font>
         <family>Poppins</family>
-        <pointsize>-1</pointsize>
+        <pointsize>11</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
@@ -1535,7 +1513,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 120px;
 }
@@ -1560,7 +1538,7 @@ QPushButton:hover{
       <property name="font">
        <font>
         <family>Poppins</family>
-        <pointsize>-1</pointsize>
+        <pointsize>11</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
@@ -1572,7 +1550,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 	height: 35px;
 	width: 120px;
 }
@@ -1609,7 +1587,7 @@ background-color:#142b39;
 }
 #title{
 color:white;
-font-size:35px;
+font-size:26pt;
 }</string>
     </property>
     <widget class="QLabel" name="title">
@@ -1624,7 +1602,7 @@ font-size:35px;
      <property name="font">
       <font>
        <family>Poppins</family>
-       <pointsize>-1</pointsize>
+       <pointsize>26</pointsize>
        <weight>75</weight>
        <italic>false</italic>
        <bold>true</bold>
