--- a/ui/addClient.ui
+++ b/ui/addClient.ui
@@ -297,7 +297,7 @@ height: 35px;
    <property name="font">
     <font>
      <family>Poppins</family>
-     <pointsize>-1</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -309,7 +309,7 @@ height: 35px;
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 }
 
 QPushButton:hover{
@@ -332,7 +332,7 @@ QPushButton:hover{
    <property name="font">
     <font>
      <family>Poppins</family>
-     <pointsize>-1</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -344,7 +344,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 }
 
 QPushButton:hover{
