--- a/ui/editClient.ui
+++ b/ui/editClient.ui
@@ -54,7 +54,7 @@ height: 35px;
    <property name="font">
     <font>
      <family>Poppins</family>
-     <pointsize>-1</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -66,7 +66,7 @@ height: 35px;
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 }
 
 QPushButton:hover{
@@ -89,7 +89,7 @@ QPushButton:hover{
    <property name="font">
     <font>
      <family>Poppins</family>
-     <pointsize>-1</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -101,7 +101,7 @@ QPushButton:hover{
 	border:none;
 	border-radius: 8px;
 	font-weight: bold;
-	font-size: 15px;
+	font-size: 11pt;
 }
 
 QPushButton:hover{
